# csbe

./: .gitignore  404.html  CLAUDE.md  README.md  index.html  mkdocs.yml
KEYWORDS/: index.html
ch01/: index.html
ch02/: index.html
ch03/: index.html
ch04/: index.html
ch05/: index.html
ch06/: index.html
ch07/: index.html
ch08/: index.html
csbe-study/: docker-compose.yml  pyproject.toml
csbe-study/csbe_study/: main.py
csbe-study/csbe_study/model/: TrafficInfo.py
csbe-study/csbe_study/repository/: TrafficInfoRepository.py  base.py
csbe-study/csbe_study/routers/: concurrency.py  data.py  datastructure.py  memory.py  network.py  printer.py  uploader.py
csbe-study/csbe_study/service/: image.py
csbe-study/k6/: 240601_io_performance_test.js  240601_without_io_performance_test.js  240602_asyncio_performance_test.js
csbe-study/k6/concurrency/: ch05_deadlock_test.js  ch05_race_condition_test.js
csbe-study/k6/data/: 240712_complex_list_performance.js  240712_complex_set_performance.js  240712_list_performance.js  240712_set_performance.js  240717_sort_performance.js  240718_cache_performance.js
csbe-study/k6/datastructure/: ch10_blacklist_test.js  ch10_list_vs_set_test.js
csbe-study/k6/memory/: ch04_process_memory_test.js  ch04_stack_overflow_test.js  ch04_thread_memory_test.js
csbe-study/k6/network/: ch06_pool_exhaustion_test.js  ch06_pool_vs_nopool_test.js
csbe-study/k6/printer/: 240601_io_performance_test.js  240601_without_io_performance_test.js  240602_asyncio_performance_test.js
csbe-study/k6/uploader/: 240615_upload_test.js
(+221 files in other folders)
